--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
             <iframe src="telas/home.html" frameborder="0">
             </iframe>
         </section>
-        <section id="redes-sociais"></section>
+        <section id="redes-sociais">
+            <a href="#">
+                <img src="pacote-d013/imagens/logo-home.jpg" alt="logo-home">
+            </a>
+            <a href="#">
+                <img src="pacote-d013/imagens/logo-instagram.jpg" alt="logo-instagram">
+            </a>
+             <a href="#">
+                <img src="pacote-d013/imagens/logo-youtube.jpg" alt="logo-youtube">
+            </a>
+             <a href="#">
+                <img src="pacote-d013/imagens/logo-twitter.jpg" alt="logo-twitter">
+            </a>
+             <a href="#">
+                <img src="pacote-d013/imagens/logo-github.jpg" alt="logo-github">
+            </a>
+            <a href="#">
+                <img src="pacote-d013/imagens/logo-facebook.jpg" alt="logo-facebook">
+            </a>
+        </section>
     </main>
 </body>
 </html>
