criei as telas das redes sociais

--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paginas sociais</title>
-    <link href="estilos/estilo.css" rel="stylesheet" >
+    <link href="estilos/index.css" rel="stylesheet" >
 </head>
 <body>
     <main>
         <section id="telefone">
-            <iframe src="telas/home.html" frameborder="0">
+            <iframe src="telas/home.html" name="iframe-iphone" frameborder="0">
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#">
-                <img src="pacote-d013/imagens/logo-home.jpg" alt="logo-home">
+            <a href="telas/home.html" target="iframe-iphone">
+                <img src="pacote-d013/imagens/logo-home.jpg"  alt="logo-home">
             </a>
-            <a href="#">
+            <a href="telas/instagram.html" target="iframe-iphone"> 
                 <img src="pacote-d013/imagens/logo-instagram.jpg" alt="logo-instagram">
             </a>
-             <a href="#">
+             <a href="telas/youtube.html" target="iframe-iphone">
                 <img src="pacote-d013/imagens/logo-youtube.jpg" alt="logo-youtube">
             </a>
-             <a href="#">
+             <a href="telas/twitter.html" target="iframe-iphone">
                 <img src="pacote-d013/imagens/logo-twitter.jpg" alt="logo-twitter">
             </a>
-             <a href="#">
+             <a href="telas/github.html" target="iframe-iphone">
                 <img src="pacote-d013/imagens/logo-github.jpg" alt="logo-github">
             </a>
-            <a href="#">
+            <a href="telas/facebook.html"target="iframe-iphone">
                 <img src="pacote-d013/imagens/logo-facebook.jpg" alt="logo-facebook">
             </a>
         </section>
